--- a/design-patterns/index.html
+++ b/design-patterns/index.html
@@ -10,6 +10,7 @@
   <h1>Just a place to experiment with design patterns</h1>
 
   <div class="factory-function-example">
+    <h2>Factory Pattern</h2>
     <div class="input-container">
       <label for="first_name">First Name</label>
       <input type="text" id="first_name">
@@ -24,6 +25,7 @@
     </div>
     <button onclick="onSubmit()">Submit</button>
   </div>
+  <hr>
 </body>
  <script src="js/factoryPattern.js"></script>
 </html>
