messing with animations

--- a/animations/BohrModel/index.html
+++ b/animations/BohrModel/index.html
@@ -12,6 +12,7 @@
     <div class="bohr-model center">
 
       <div class="ring p center">
+        <span class="atom"></span>
         <div class="ring s center">
           <span class="atom"></span>
           <div class="ring element center">
